2010-11-25  John W. Eaton  <jwe@octave.org>

	* time/datetick.m: Add missing semicolon.

2010-11-21  Rik  <octave@nomad.inbox5.com>

	* optimization/sqp.m: Use correct stopping tolerance in documentation.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* (plot/uigetdir.m, plot/private/__fltk_file_filter__.m:): Check if
	file argument is a valid path, don't use fileparts in this case.

2010-11-21  Ben Abbott  <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Fix plot titles so they are visible for
	gnuplot 4.4.x (31711).
	* general/cell2mat.m: Return empty matrix for empty cell.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* (plot/uigetfile.m, plot/uiputfile.m): Set default directory to pwd.

2010-11-21  Kai Habel  <kai.habel@gmx.de>

	* plot/uigetdir.m, plot/uigetfile.m, plot/uiputfile.m,
	plot/private/__fltk_file_filter__.m: New files.
	* plot/module.mk: Add new files.
	* miscellaneous/unimplemented.m: Remove uigetdir.m, uigetfile.m,
	and uiputfile.m from list of unimplemented functions.

2010-11-20  Rik  <octave@nomad.inbox5.com>

	* plot/gnuplot_drawnow.m: Remove spurious line causing 'ans=1' to be
	returned when printing plots.

2010-11-19  Ben Abbott  <bpabbott@mac.com>

	* plot/__gnuplot_has_feature__.m: Since there is not gnuplot 4.3.x
	release, replace reference to version 4.3 with 4.4.

2010-11-18  Ben Abbott  <bpabbott@mac.com>

	* plot/text.m: Ensure text position property is set after units
	property.
	* plot/__go_draw_axes__.m: Fix bug setting zscale to yscale (31693).

2010-11-18  Christos Dimitrakakis  <christos.dimitrakakis@gmail.com>

	* statistics/distributions/betapdf.m: Use lgamma to compute
	normalising constant in log space in order to handle large
	parameters a and b.  Ensure correct values at x == 0 or x == 1.

2010-11-18  Ben Abbott  <bpabbott@mac.com>

	* plot/__print_parse_opts__.m: For tests, allow __print_parse_opts__
	to run with no inputs.

2010-11-17  Ben Abbott  <bpabbott@mac.com>

	* general/subsindex.m: Fix typo in doc-string.
